fix spacing in Firefox

--- a/data/media/css/main.css
+++ b/data/media/css/main.css
@@ -104,6 +104,7 @@ div.introbox {
 	display: block;
 	float: left;
 }
+div.introbox h4 { margin-top: 1em; }
 
 #leftIntro {
 	width: 258px;
